# rust-ios-device

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md  SECURITY.md
crates/ios-cli/: Cargo.toml  README.md
crates/ios-cli/examples/: afc_debug.rs  app_list.rs  device_info.rs  file_transfer.rs  instruments_cpu.rs  screenshot.rs  syslog_stream.rs
crates/ios-cli/src/: main.rs  output.rs
crates/ios-cli/src/cmd/: accessibility_audit.rs  activation.rs  amfi.rs  apps.rs  arbitration.rs  backup.rs  batterycheck.rs  batteryregistry.rs  companion.rs  crash.rs  ddi.rs  debug.rs  debugserver.rs  devicestate.rs  diagnostics.rs  discover.rs  diskspace.rs  dproxy.rs  erase.rs  file.rs  file_relay.rs  forward.rs  heartbeat.rs  httpproxy.rs  idam.rs  info.rs  instruments.rs  list.rs  listen.rs  location.rs  lockdown.rs  memlimitoff.rs  mobilegestalt.rs  mod.rs  notification.rs  os_trace.rs  pair.rs  pcap.rs  power_assert.rs  preboard.rs  (+14 more)
crates/ios-core/: Cargo.toml  README.md
crates/ios-core/src/: credentials.rs  device.rs  discovery.rs  error.rs  lib.rs  pairing_transport.rs  psk_tls.rs  test_util.rs
crates/ios-core/src/lockdown/: client.rs  mod.rs  pair_record.rs  pairing.rs  protocol.rs  session.rs  supervised_pair.rs
crates/ios-core/src/mux/: client.rs  listener.rs  mod.rs  protocol.rs
crates/ios-core/src/proto/: afc.rs  dtx.rs  mod.rs  nskeyedarchiver_encode.rs  usbmuxd.rs  xpc.rs
crates/ios-core/src/services/: coredevice.rs  device_link.rs  diagnostics.rs  mobileactivation.rs  mod.rs  plist_frame.rs
crates/ios-core/src/services/accessibility_audit/: mod.rs
crates/ios-core/src/services/afc/: mod.rs  protocol.rs
crates/ios-core/src/services/amfi/: mod.rs
crates/ios-core/src/services/apps/: appservice.rs  installation.rs  mod.rs  zipconduit.rs
crates/ios-core/src/services/arbitration/: mod.rs
crates/ios-core/src/services/backup2/: mod.rs
crates/ios-core/src/services/companion/: mod.rs
crates/ios-core/src/services/crashreport/: mod.rs
crates/ios-core/src/services/debugserver/: mod.rs
crates/ios-core/src/services/deviceinfo/: mod.rs
crates/ios-core/src/services/diagnosticsservice/: mod.rs
crates/ios-core/src/services/dproxy/: mod.rs
crates/ios-core/src/services/dtx/: codec.rs  mod.rs  primitive.rs  primitive_enc.rs
crates/ios-core/src/services/fetchsymbols/: mod.rs
crates/ios-core/src/services/file_relay/: mod.rs
crates/ios-core/src/services/fileservice/: mod.rs
crates/ios-core/src/services/heartbeat/: mod.rs
crates/ios-core/src/services/house_arrest/: mod.rs
crates/ios-core/src/services/idam/: mod.rs
crates/ios-core/src/services/imagemounter/: download.rs  manifest.rs  mod.rs  protocol.rs
crates/ios-core/src/services/instruments/: activity_trace.rs  application_listing.rs  core_profile_session.rs  deviceinfo.rs  devicestate.rs  energy.rs  fps.rs  graphics.rs  mod.rs  network.rs  notifications.rs  process_control.rs  screenshot.rs  tap.rs
crates/ios-core/src/services/mcinstall/: mod.rs
crates/ios-core/src/tunnel/: forward.rs  handshake.rs  manager.rs  mod.rs
crates/ios-core/src/xpc/: client.rs  codec.rs  h2_raw.rs  message.rs  mod.rs  rsd.rs
crates/ios-core/tests/: accessibility_audit.rs  backup2.rs  debugserver.rs  fetchsymbols.rs  ostrace.rs  prepare.rs  testmanager.rs  webinspector.rs
crates/ios-ffi/: Cargo.toml  README.md  cbindgen.toml
crates/ios-ffi/include/: ios_rs.h
crates/ios-ffi/src/: lib.rs
crates/ios-lockdown/: Cargo.toml  README.md
crates/ios-lockdown/src/: client.rs  lib.rs  pair_record.rs  pairing.rs  protocol.rs  session.rs  supervised_pair.rs
crates/ios-mux/: Cargo.toml  README.md
crates/ios-mux/src/: client.rs  connection.rs  lib.rs  listener.rs  protocol.rs
crates/ios-proto/: Cargo.toml  README.md
crates/ios-proto/src/: lockdown.rs  nskeyedarchiver.rs  nskeyedarchiver_encode.rs  opack.rs  tls.rs  tlv.rs  xpc.rs
crates/ios-py/: Cargo.toml  README.md  pyproject.toml
crates/ios-py/examples/: pymobiledevice3_coredevice_bridge.py
crates/ios-py/src/: lib.rs
crates/ios-services/: Cargo.toml  README.md
crates/ios-services/src/: lib.rs  mobileactivation.rs
crates/ios-services/src/accessibility_audit/: mod.rs
crates/ios-services/src/afc/: mod.rs
crates/ios-services/src/apps/: appservice.rs
crates/ios-services/src/arbitration/: mod.rs
crates/ios-services/src/backup2/: mod.rs
crates/ios-services/src/crashreport/: mod.rs
crates/ios-services/src/deviceinfo/: mod.rs
crates/ios-services/src/dproxy/: mod.rs
crates/ios-services/src/dtx/: codec.rs  primitive.rs  types.rs
crates/ios-services/src/fetchsymbols/: mod.rs
crates/ios-services/src/file_relay/: mod.rs
crates/ios-services/src/fileservice/: mod.rs
crates/ios-services/src/heartbeat/: mod.rs
crates/ios-services/src/house_arrest/: mod.rs
crates/ios-services/src/imagemounter/: download.rs  manifest.rs  tss.rs
crates/ios-services/src/instruments/: activity_trace.rs  application_listing.rs  core_profile_session.rs  deviceinfo.rs  devicestate.rs  energy.rs  graphics.rs  mod.rs  network.rs  notifications.rs  process_control.rs  screenshot.rs  tap.rs
crates/ios-services/src/mcinstall/: mod.rs
crates/ios-services/src/misagent/: mod.rs
crates/ios-services/src/ostrace/: mod.rs
crates/ios-services/src/power_assertion/: mod.rs
crates/ios-services/src/preboard/: mod.rs
crates/ios-services/src/restore/: mod.rs
crates/ios-services/src/screenshot/: mod.rs
crates/ios-services/src/simlocation/: mod.rs
crates/ios-services/src/springboard/: mod.rs
crates/ios-services/src/testmanager/: mod.rs  workflow.rs
crates/ios-services/tests/: accessibility_audit.rs  backup2.rs  debugserver.rs  fetchsymbols.rs  ostrace.rs  prepare.rs  testmanager.rs  webinspector.rs
crates/ios-tunnel/: Cargo.toml  README.md
crates/ios-tunnel/src/: forward.rs  handshake.rs  lib.rs  manager.rs
crates/ios-tunnel/src/tun/: kernel.rs  mod.rs  userspace.rs
crates/ios-xpc/: Cargo.toml  README.md
crates/ios-xpc/src/: client.rs  codec.rs  h2_raw.rs  lib.rs  message.rs  rsd.rs
(+36 files in other folders)
