[package]
name = "ios-cli"
description = "Command-line tool for iOS device management, tunneling, and service interaction"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ios"
path = "src/main.rs"

[dependencies]
ios-core    = { path = "../ios-core" }
ios-lockdown = { path = "../ios-lockdown" }
ios-mux     = { path = "../ios-mux" }
ios-tunnel  = { path = "../ios-tunnel" }
ios-services = { path = "../ios-services", features = ["afc","arbitration","apps","companion","notificationproxy","crashreport","springboard","mcinstall","heartbeat","file_relay","syslog","screenshot","misagent","dtx","instruments","testmanager","accessibility_audit","imagemounter","debugserver","pcap","power_assertion","preboard","idam","fetchsymbols","ostrace","prepare","restore","dproxy","webinspector"] }
tokio    = { workspace = true }
tokio-stream = { workspace = true }
anyhow   = { workspace = true }
tracing  = { workspace = true }
clap     = { workspace = true }
serde_json = { workspace = true }
serde      = { workspace = true }
comfy-table = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
ios-xpc = { path = "../ios-xpc" }
ios-proto = { path = "../ios-proto" }
bytes    = { workspace = true }
semver   = { workspace = true }
plist    = { workspace = true }
rustls   = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
serde_urlencoded = "0.7"
