[package]
name = "ios-cli"
description = "Command-line tool for iOS device management, tunneling, and service interaction"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ios"
path = "src/main.rs"

[dependencies]
ios-core    = { workspace = true, features = ["full"] }
tokio    = { workspace = true, features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { workspace = true }
anyhow   = { workspace = true }
tracing  = { workspace = true }
clap     = { workspace = true }
serde_json = { workspace = true }
serde      = { workspace = true }
comfy-table = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
bytes    = { workspace = true }
semver   = { workspace = true }
plist    = { workspace = true }
rustls   = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
futures-util = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
indexmap = { workspace = true }
serde_urlencoded = "0.7"
