[package]
name = "ios-ffi"
description = "C FFI bindings for the rust-ios-device library"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
keywords = ["ios", "apple", "ffi", "mobile", "usbmuxd"]
categories = ["api-bindings", "development-tools::ffi"]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ios-core  = { workspace = true, features = ["mdns", "tunnel-userspace"] }
tokio     = { workspace = true, features = ["rt-multi-thread"] }
once_cell = { workspace = true }
plist     = { workspace = true }
serde_json = { workspace = true }
