[package]
name = "ios-lockdown"
description = "Lockdown protocol implementation with TLS, pair records, and device pairing for iOS"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ios-proto   = { version = "0.1", path = "../ios-proto" }
ios-mux     = { version = "0.1", path = "../ios-mux" }
tokio       = { workspace = true }
bytes       = { workspace = true }
plist       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
rustls      = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-util  = { workspace = true }
semver      = { workspace = true }
sha2        = { workspace = true }
hkdf        = { workspace = true }
chacha20poly1305 = { workspace = true }
zeroize     = { workspace = true }
p256        = { workspace = true }
serde_bytes = { workspace = true }
openssl     = { workspace = true }
num-bigint  = { workspace = true }
num-traits  = { workspace = true }
rand        = { workspace = true }
uuid        = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek  = { workspace = true }
