[package]
name = "ios-mux"
description = "usbmuxd client for iOS device discovery and connection multiplexing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ios-proto   = { version = "0.1.0", path = "../ios-proto" }
tokio       = { workspace = true }
bytes       = { workspace = true }
plist       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tokio-util  = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
