[package]
name = "ios-proto"
description = "Protocol types and codecs for iOS device communication (AFC, DTX, lockdown, XPC, OPACK)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bytes      = { workspace = true }
zerocopy   = { workspace = true }
plist      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
indexmap   = { workspace = true }
tracing    = { workspace = true }
uuid       = { workspace = true }
rustls     = { workspace = true }
