[package]
name = "ios-services"
description = "Feature-gated iOS device services: AFC, syslog, screenshot, apps, DTX, instruments, and more"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
# Apple File Conduit — device filesystem access (ls, pull, push, mkdir, rm)
afc = []
# Device arbitration — claim/release exclusive device access
arbitration = []
# App lifecycle — install, uninstall, launch, kill, list installed apps (requires crc32fast+zip for IPA install)
apps = ["crc32fast", "zip"]
# Companion proxy — paired accessory device discovery (Apple Watch, etc.)
companion = []
# Notification proxy — subscribe to and post device notifications
notificationproxy = []
# Crash report management — list, download, and delete crash logs (requires afc)
crashreport = ["afc"]
# SpringBoard services — icon layout, wallpaper, orientation, icon metrics
springboard = []
# Configuration profile install/remove via MCInstall
mcinstall = []
# Connection keepalive heartbeat service
heartbeat = []
# File relay — request archived diagnostic bundles from the device
file_relay = []
# System log relay — real-time streaming syslog
syslog = []
# Screen capture — single screenshot or MJPEG stream via Instruments
screenshot = []
# Provisioning profile management via misagent
misagent = []
# AMFI — developer mode and code-signing trust management
amfi = []
# DTX message transport — base codec for Instruments and TestManager (enables lz4 compression)
dtx = ["lz4_flex"]
# Instruments performance monitoring — CPU, GPU, FPS, network, energy, sysmontap (requires dtx)
instruments = ["dtx"]
# XCTest execution framework — run UI/unit tests via testmanagerd (requires dtx)
testmanager = ["dtx"]
# Accessibility audit — run AX audits and interactive element navigation (requires dtx)
accessibility_audit = ["dtx"]
# LLDB remote debug server connection
debugserver = []
# CoreDevice XPC file service for iOS 17+
fileservice = []
# CoreDevice XPC device info queries for iOS 17+
deviceinfo = []
# Developer disk image mounting — download and mount DeveloperDiskImage.dmg
imagemounter = ["reqwest", "zip", "dirs-next"]
# Network packet capture via pcapd
pcap = []
# Power assertion — prevent device sleep during operations
power_assertion = []
# Preboard — stashbag commit/rollback for passcode operations
preboard = []
# Identity and Device Authentication Management
idam = []
# Debug symbol download from device
fetchsymbols = []
# OS trace relay — process listing via os_trace
ostrace = []
# Supervised device preparation — generate supervision certs and install profiles (requires afc+mcinstall)
prepare = ["afc", "mcinstall"]
# Restore mode operations — enter/exit recovery, firmware restore
restore = []
# DTX debug proxy — record and replay DTX sessions (requires dtx)
dproxy = ["dtx"]
# Safari/WebView remote debugging via WebInspector protocol
webinspector = []

[dependencies]
ios-proto    = { version = "0.1.0", path = "../ios-proto" }
ios-mux      = { version = "0.1.0", path = "../ios-mux" }
ios-lockdown = { version = "0.1.0", path = "../ios-lockdown" }
ios-tunnel   = { version = "0.1.0", path = "../ios-tunnel" }
ios-xpc      = { version = "0.1.0", path = "../ios-xpc" }
tokio        = { workspace = true }
bytes        = { workspace = true }
plist        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tokio-util   = { workspace = true }
tokio-stream = { workspace = true }
indexmap     = { workspace = true }
lz4_flex     = { workspace = true, optional = true }
zerocopy     = { workspace = true }
futures-util = { workspace = true }
async-stream = { workspace = true }
quick-xml    = { workspace = true }
time         = { workspace = true }
reqwest      = { workspace = true, optional = true }
zip          = { workspace = true, optional = true }
uuid         = { workspace = true }
dirs-next    = { workspace = true, optional = true }
semver       = { workspace = true }
openssl      = { workspace = true }
hex          = { workspace = true }
crc32fast    = { workspace = true, optional = true }

[dev-dependencies]
uuid         = { workspace = true }
